Fixed merge. Fixed z-index issue Added debug flag again.

--- a/WebUI/style/style.css
+++ b/WebUI/style/style.css
@@ -183,3 +183,6 @@ canvas {
 #page div {
 	z-index: 1;
 }
+#toolbar div {
+    z-index: 9;
+}
